manifest/objects/ALTF__Assessment_Question__c.object
<CustomObject>
    <description>ADMIN ONLY DATA CONFIG AND PICKLIST CONFIG

This object is responsible for the set of Assessment questions within Smart Opportunity Manager. The data in this object can be edited through the Altify Admin App. Also customisation of the picklist values in the Question attribute is supported.</description>
    <fields>
        <fullName>ALTF__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is this criterion currently included in assessments</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Criterion_Text__c</fullName>
        <inlineHelpText>This is the text of the criterion, i.e. &quot;Is there a compelling event
      ?&quot;</inlineHelpText>
        <label>Criterion Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Help__c</fullName>
        <inlineHelpText>Tip/Hint text displayed to the user on clicking the &apos;i&apos; icon beside the assessment criterion. The same text is also displayed on the right of the &quot;add comments&quot; pop-up screen.</inlineHelpText>
        <label>Help</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ALTF__Long_Question__c</fullName>
        <label>Question Text</label>
        <length>1280</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field should be deprecated, as it is not used by the Altify application.</inlineHelpText>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__No_Label__c</fullName>
        <inlineHelpText>Text displayed for a &quot;-&quot; response to the criterion</inlineHelpText>
        <label>No Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__No_Score__c</fullName>
        <inlineHelpText>Score given to a &quot;-&quot; response to the criterion. The more damaging a negative response to a criterion is to the current position on the opportunity, the more negative the score entered here should be.</inlineHelpText>
        <label>No Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Order_Number__c</fullName>
        <inlineHelpText>This controls the order in which the criterion appears within its Question</inlineHelpText>
        <label>Order Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Question__c</fullName>
        <inlineHelpText>The section heading under which the criterion will be displayed. 

Defined as a picklist, you can edit the section headings (change the names of the existing and/or add new) under App Setup &gt; Create &gt; Objects &gt; Assessment Criterion &gt; Section Headi</inlineHelpText>
        <label>Section Heading</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is there an opportunity?</fullName>
                </value>
                <value>
                    <fullName>Can we compete?</fullName>
                </value>
                <value>
                    <fullName>Can we win?</fullName>
                </value>
                <value>
                    <fullName>Is it worth winning?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Recommended__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Assessment Criterion marked as &apos;Comments Recommended&apos; will be checked for comments when calculating the Assessment Completeness level. If the user does not have comments included against &apos;Comments Recommended&apos; criterion, full marks will not be awarded for completeness on the Assessment. Details for how the Assessment Completeness is marked can be found in the online help.</description>
        <inlineHelpText>Assessment Criterion marked as &apos;Comments Recommended&apos; will be checked for comments when calculating the Assessment Completeness level. Details for how the Assessment Completeness is marked can be found in the online help.</inlineHelpText>
        <label>Comments Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this criterion appear in assessment summaries</inlineHelpText>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Support_Competitor_Answer__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Is it sensible for this criterion to have competitor answers, as well as answers for your organization? This is checked by default.</inlineHelpText>
        <label>Support Competitor Answer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Unknown_Score__c</fullName>
        <inlineHelpText>Score given to a &quot;?&quot; response to the criterion. Typically set to &quot;0&quot;, as the position is neither positive nor negative. However, you can set a plus or minus score if you determine that a &quot;?&quot; position on this criterion is better or worse than no resp</inlineHelpText>
        <label>Unknown Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Yes_Label__c</fullName>
        <inlineHelpText>Text displayed for a &quot;+&quot; response to a criterion.</inlineHelpText>
        <label>Yes Label</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Yes_Score__c</fullName>
        <inlineHelpText>Score given to a &quot;+&quot; response to the criterion. The more positive a &quot;+&quot; response to this criterion is to the current position on the opportunity, the more positive the score entered here should be.</inlineHelpText>
        <label>Yes Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Altify Assessment Question</label>
    <nameField>
        <label>Assessment Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Assessment Questions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>